syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AuthServer.Shared.Admin";

service Users {
  rpc ListUsers (google.protobuf.Empty) returns (UserListReply);
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc ChangeAdminState (ChangeAdminStateRequest) returns (ChangeAdminStateResponse);
}

message ChangeAdminStateRequest {
  string id = 1;
  bool is_admin = 2;
}

message ChangeAdminStateResponse {
  bool success = 1;
}

message UserListReply {
  repeated User users = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  bool has_picture = 4;
  bool is_admin = 5;
  bool is_enabled = 6;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  bool success = 1;
  google.protobuf.StringValue error = 2;
}
